--- a/css/main.css
+++ b/css/main.css
@@ -102,3 +102,11 @@
     border-radius: 10px 0 0 10px;
     height: 50px;
 }
+.footer_widgets .col-md-4 button{
+    border: 1px solid #ddd;
+    border-radius:0 10px 10px 0;
+    margin-left: -1px;
+    border-left: none;
+    color: #fff;
+    background: red;
+}
