--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,8 @@
 #header_area{
     padding: 10px 0;
     margin: 0;
+    position: fixed;
+    width: 100%;
 }
 #header_area .col-md-3 a{
     text-decoration: none;
