--- a/css/login_enqueue.css
+++ b/css/login_enqueue.css
@@ -12,7 +12,46 @@ body.login{
 }
 
 .login form {
+    border: 0;
+    box-shadow: none;
+    background: none;
+    padding: 0;
 }
+#login form p.submit{
+    display: block;
+}
+#login form p.submit input{
+    display: block;
+    width: 100%;
+    margin-top: 10px;
+    border: 0;
+    background-color: blue;
+    padding: 10px;
+    font-size: 15px;
+    transition: 0.5s;
+}
+#login form p.submit input:hover{
+    background: black;
+    color: #fff;
+}
+.login #nav{
+    margin: 0;
+    margin-top: 10px;
+    width: 40%;
+    float: left;
+    padding: 0;
+
+}
+.login #backtoblog{
+    margin: 0;
+    margin-top: 10px;
+    width: 60%;
+    float: right;
+    text-align: right;
+    padding: 0;
+}
+
+
 .language-switcher{
    display: none;
 }
