--- a/css/main.css
+++ b/css/main.css
@@ -121,3 +121,21 @@
 .home-page-content{
     text-align: center;
 }
+
+
+
+#not_found{
+    padding: 100px 0;
+    text-align: center;
+}
+#not_found h2{
+    font-size: 50px;
+    color: blue;
+    font-weight: bold;
+}
+#not_found p{
+    font-size: 30px;
+    color: rgb(0, 0, 0);
+    font-weight: bold;
+    padding: 20px 0;
+}
