--- a/css/main.css
+++ b/css/main.css
@@ -182,3 +182,30 @@
     color: #007BFF;
 }
     
+
+.pagination{
+    display: inline;
+}
+.pagination .page{
+    padding: 10px 10px;
+    background: #ea1a70;
+    color: #000;
+    width: 100%;
+    font-size: 20px;
+    font-weight: bold;
+}
+.pagination a{
+    text-decoration: none;
+    color: #fff;
+    padding:5px 10px ;
+    background: #007BFF;
+    font-weight: bold;
+    border-radius: 5px;
+    transition: 0.5s;
+}
+.page_nav .page-numbers.current, .page-numbers:hover{
+    background: #000;
+    color: #fff;
+    border-radius: 5px;
+    padding: 5px 10px;
+}
