--- a/css/main.css
+++ b/css/main.css
@@ -67,9 +67,9 @@
 
 
 /* Footer Area */
-/* #footer_area{
+#footer_area{
     width: 100%;
-} */
+}
 .footer_widgets{
     background-color: aqua;
 }
